<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frmItem">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:paddingLeft="20dp"
        android:text="Add Item"
        android:textSize="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"

        tools:text="Add Item" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/cname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/txtdiscount"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/cdiscount"
        android:inputType="number"

        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:background="@color/btncolor"
        android:text="Add Item"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/txtprice"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"

        android:hint="@string/cprice"
        android:inputType="number"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />
</androidx.constraintlayout.widget.ConstraintLayout>